--- a/app/src/main/res/layout/assignment_item.xml
+++ b/app/src/main/res/layout/assignment_item.xml
@@ -1,27 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:padding="12dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp">
 
-        <TextView
-            android:id="@+id/assignmentTitle"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:ellipsize="end"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/dueDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:padding="8dp"
-            android:textColor="@color/blue"
-            android:textSize="18sp" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/assignmentTitle"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="8dp"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="Assignment Name" />
 
+            <TextView
+                android:id="@+id/dueDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/assignmentTitle"
+                android:paddingBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="4dp"
+                android:textColor="@color/blue"
+                android:textSize="16sp"
+                tools:text="due at Jun 9, 2017" />
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 </layout>
