Fix UI, add some checks in create assignment screen, fix bugs.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="alert_dialog_button">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="background">@color/white</item>
+        <item name="buttonBarButtonStyle">@style/alert_dialog_button</item>
+    </style>
 </resources>
