--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -40,13 +40,13 @@
                 android:inputType="textMultiLine"
                 android:paddingTop="16dp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/etDueDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/etAssignmentDetails"
                 android:hint="@string/due_at"
-                android:inputType="date"
+                style="@android:style/Widget.EditText"
                 android:paddingTop="16dp" />
 
             <CheckBox
